[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physionetiflp"
version = "0.1.0"
description = "A Python package for accesing data from Physionet"
authors = [
    {name = "Mauricio Matera", email = "matera@fisica.unlp.edu.ar"},
]
requires-python=">=3.10"
license = {text = "GPL"}
readme = "README.md"
classifiers = ['Programming Language :: Python :: 3', 'License :: OSI Approved :: MIT License', 'Operating System :: OS Independent']
dependencies = [
    # List your dependencies here, e.g.:
    "numpy>=1.21.0",
    "pandas",
    "pyedflib",
    # "scipy>=1.7.0",
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["physionet*"]


[tool.setuptools.package-data]
"physionet" = [
    "data/*.pcl",
]
"physionet.doc" = [
    "doc/*.md",
]

[tool.setuptools.dynamic]
version = {attr = "physionet.version.__version__"}
